--- a/academics.html
+++ b/academics.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <title>Taunggalay Buddhism College</title>
+  <title>Taunggalay Buddhist College</title>
   <meta charset="utf-8" />
   <meta name="description"
-    content="Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
+    content="Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
@@ -20,7 +20,7 @@
     <nav>
       <a href="index.html" class="logo" rel="home">
         <img src="media/logos/logo-370x370.png" alt="logo" width="" height="370">
-        <span>Taunggalay Buddhism College</span></a>
+        <span>Taunggalay Buddhist College</span></a>
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
@@ -54,7 +54,7 @@
     <section class="bg-dark center-tablet dark padding">
       <div class="margin-bottom margin-top max-width-m">
         <h2>Degree Program</h2>
-        <p class="lead">The two-year degree program at Taunggalay Buddhism College offers a unique curriculum that
+        <p class="lead">The two-year degree program at Taunggalay Buddhist College offers a unique curriculum that
           combines core courses in mathematics, English, physics, chemistry, Buddha logic, and Buddhist culture with
           specialized tracks in Vinaya Pitaka, Sutta Pitaka, and Abhidhamma Pitaka. This interdisciplinary approach
           allows students to develop a well-rounded understanding of both the theoretical and practical aspects of
@@ -66,7 +66,7 @@
       <div class="margin-bottom margin-top">
         <h2>Admission Requirements</h2>
         <p class="lead">
-          Taunggalay Buddhism College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed a
+          Taunggalay Buddhist College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed a
           certain level of Pariyatti study in Buddhism. Applicants must be between the ages of 18 and 25 and have a
           basic or intermediate level of English proficiency, as all instruction will be in English and conducted online. For those
           fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance
@@ -100,7 +100,7 @@
     <section class="center padding">
       <div class="margin-bottom max-width-m">
         <h3>Curriculum / Courses Overview</h3>
-        <p class="lead">The two-year degree program at Taunggalay Buddhism College is designed to provide a
+        <p class="lead">The two-year degree program at Taunggalay Buddhist College is designed to provide a
           comprehensive education that integrates modern sciences with traditional Buddhist studies. Our curriculum aims
           to equip students with a strong foundation in both academic and spiritual knowledge.</p>
       </div>
