--- a/default-template.html
+++ b/default-template.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Taunggalay Buddhism College</title>
+  <title>Taunggalay Buddhist College</title>
   <meta charset="utf-8" />
-  <meta name="description" content="Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
+  <meta name="description" content="Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
@@ -22,7 +22,7 @@
         
         <!-- <?xml version="1.0" encoding="UTF-8"?> -->
         
-        <span>Taunggalay Buddhism College</span></a>
+        <span>Taunggalay Buddhist College</span></a>
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
