--- a/style-guide.html
+++ b/style-guide.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Taunggalay Buddhism College - Design System</title>
+  <title>Taunggalay Buddhist College - Design System</title>
   <meta charset="utf-8" />
-  <meta name="description" content="Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
+  <meta name="description" content="Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
@@ -17,7 +17,7 @@
     <nav>
       <a href="index.html" class="logo" rel="home">
         <img src="media/logos/logo-370x370.png" alt="logo" width="" height="370">
-        <span>Taunggalay Buddhism College</span></a>
+        <span>Taunggalay Buddhist College</span></a>
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
@@ -67,7 +67,7 @@
             <p class="paragraph">
               University Motto and Seal 
               
-              “မဂ်ချမ်းသာ ပိုမိုမြင့်၊ ကဲ,ချင့် တောက်ထွန်း” is Taunggalay Buddhism College's official motto 
+              “မဂ်ချမ်းသာ ပိုမိုမြင့်၊ ကဲ,ချင့် တောက်ထွန်း” is Taunggalay Buddhist College's official motto 
               and translates as “The Fruition of Holy Path Surpasses All.” 
               <!-- The motto is part of the university seal? -->
             </p>
