--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Taunggalay Buddhism College</title>
+  <title>Taunggalay Buddhist College</title>
   <meta charset="utf-8" />
-  <meta name="description" content="Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
+  <meta name="description" content="Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
@@ -22,7 +22,7 @@
         
         <!-- <?xml version="1.0" encoding="UTF-8"?> -->
         
-        <span>Taunggalay Buddhism College</span></a>
+        <span>Taunggalay Buddhist College</span></a>
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
@@ -39,7 +39,7 @@
 
     <section class="bg-image-03 center full-screen middle overlay padding">
       <div class="max-width-m">
-        <h1>Taunggalay Buddhism College</h1>
+        <h1>Taunggalay Buddhist College</h1>
         <p class="lead">Where Buddhism meets Science</p>
         <!-- <a href="signup.html" class="button button-primary space-top" role="button">Get started, it's free!</a> -->
       </div>
@@ -143,14 +143,14 @@
     <!-- <section class="bg-dark center-tablet dark padding">
       <div class="margin-bottom margin-top max-width-m">
         <h2>About</h2>
-        <p class="lead">Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen State of Myanmar, this two-year degree program is designed to equip bhikkhu, bhikkhunī, and laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic disciplines.</p>
+        <p class="lead">Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen State of Myanmar, this two-year degree program is designed to equip bhikkhu, bhikkhunī, and laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic disciplines.</p>
       </div>
     </section> -->
 
     <section class="bg-dark center-tablet dark padding">
       <div class="margin-bottom margin-top max-width-m">
         <h2>Mission and Vision</h2>
-        <p class="lead">The college's motto, "The Fruition of Holy Path Surpasses all," encapsulates its mission to provide a transformative educational experience that empowers students to deepen their spiritual understanding while also cultivating practical skills and critical thinking abilities. The vision of Taunggalay Buddhism College is to become a leading center of excellence in the integration of Buddhist wisdom and scientific inquiry, fostering a new generation of scholars and leaders who can navigate the complexities of the modern world with compassion and wisdom.
+        <p class="lead">The college's motto, "The Fruition of Holy Path Surpasses all," encapsulates its mission to provide a transformative educational experience that empowers students to deepen their spiritual understanding while also cultivating practical skills and critical thinking abilities. The vision of Taunggalay Buddhist College is to become a leading center of excellence in the integration of Buddhist wisdom and scientific inquiry, fostering a new generation of scholars and leaders who can navigate the complexities of the modern world with compassion and wisdom.
       </div>
     </section>
 
