--- a/signup.html
+++ b/signup.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Taunggalay Buddhism College - Sign Up</title>
+  <title>Taunggalay Buddhist College - Sign Up</title>
   <meta charset="utf-8" />
-  <meta name="description" content="Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
+  <meta name="description" content="Taunggalay Buddhist College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
@@ -19,7 +19,7 @@
       <div class="center">
         <a href="index.html" class="logo" rel="home">
           <img src="media/logos/logo-370x370.png" alt="logo" width="" height="370">
-          <span>Taunggalay Buddhism College</span></a>
+          <span>Taunggalay Buddhist College</span></a>
       </div>
       <div class="card card-content space-bottom">
         <h6>Welcome!</h6>
