update volunteer program email

--- a/academics.html
+++ b/academics.html
@@ -108,6 +108,7 @@
         <div class="row margin-bottom">
           <div class="col-one-fourth middle">
             <h2>First Semester</h2>
+            <h5>September - December</h5>
           </div>
           <div class="col-one-fourth">
             <img class="min-width-l rounded" src="media/content/courses/engl-101.png"
@@ -124,14 +125,14 @@
             <img class="min-width-l rounded" src="media/content/courses/religst-101.png"
               srcset="media/content/courses/religst-101.png 1x, media/content/courses/religst-101@2x.png 2x" alt="RELIGST 101">
             <h6><br>RELIGST 101 <br>Buddhist Culture</h6>
-          </div>
-          
+          </div>   
         </div>
       </div>
       <div class="max-width-l">
         <div class="row margin-bottom">
           <div class="col-one-fourth middle">
             <h2>Second Semester</h2>
+            <h5>January - April</h5>
           </div>
           <div class="col-one-fourth">
             <img class="min-width-l rounded" src="media/content/courses/math-101.jpeg"
@@ -149,34 +150,29 @@
               srcset="media/content/courses/religst-102.png 1x, media/content/courses/religst-102@2x.png 2x" alt="RELIGST 102">
             <h6><br>RELIGST 102 <br>Buddhist Logic and Epistemology</h6>
           </div>
-          
-
-          <!-- <div class="col-one-fourth">
-            <i class="feature-icons material-icons bg-gradient-green dark">line_style</i>
-            <h6>Custom Framework</h6>
-          </div>
-          <div class="col-one-fourth">
-            <i class="feature-icons material-icons bg-gradient-indigo dark">chrome_reader_mode</i>
-            <h6>Design System</h6>
-          </div>
         </div>
-        <div class="row">
-          <div class="col-one-fourth">
-            <i class="feature-icons material-icons bg-gradient-olive dark">code</i>
-            <h6>CSS + SASS</h6>
+      </div>
+      <div class="max-width-l">
+        <div class="row margin-bottom">
+          <div class="col-one-fourth middle">
+            <h2>Third and Fourth Semester</h2>
           </div>
           <div class="col-one-fourth">
-            <i class="feature-icons material-icons bg-gradient-sienna dark">settings</i>
-            <h6>100% Customizable</h6>
+            <img class="min-width-l rounded" src="media/content/courses/math-101.jpeg"
+              srcset="media/content/courses/math-101.jpeg 1x, media/content/courses/math-101@2x.jpeg 2x" alt="MATH 101">
+            <h6><br>MATH 101 <br>College Algebra</h6>
           </div>
           <div class="col-one-fourth">
-            <i class="feature-icons material-icons bg-gradient-blue dark">view_day</i>
-            <h6>Modular Design</h6>
+            <img class="min-width-l rounded" src="media/content/courses/phys-101.jpeg"
+              srcset="media/content/courses/phys-101.jpeg 1x, media/content/courses/phys-101@2x.jpeg 2x"
+              alt="CHEM 101">
+            <h6><br>PHYS 101 <br>Introductory Physics</h6>
           </div>
           <div class="col-one-fourth">
-            <i class="feature-icons material-icons bg-gradient-violet dark">check</i>
-            <h6>HTML5 Valid</h6>
-          </div> -->
+            <img class="min-width-l rounded" src="media/content/courses/religst-102.png"
+              srcset="media/content/courses/religst-102.png 1x, media/content/courses/religst-102@2x.png 2x" alt="RELIGST 102">
+            <h6><br>RELIGST 102 <br>Buddhist Logic and Epistemology</h6>
+          </div>
         </div>
       </div>
 
@@ -202,7 +198,7 @@
         <div class="col-one-fifth">
           <h6>Volunteer Programs</h6>
           <ul class="blank">
-            <li>Coming Soon</li>
+            <li><a href="mailto:maharpyinnyar2020@gmail.com">Email Us</a></li>
           </ul>
         </div>
         <div class="col-one-fifth">
