--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="col-one-fifth">
           <h6>Volunteer Programs</h6>
           <ul class="blank">
-            <li>Coming Soon</li>
+            <li><a href="mailto:maharpyinnyar2020@gmail.com">Email Us</a></li>
           </ul>
         </div>
         <div class="col-one-fifth">
