rearrange html pages and delete some images

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 
     <section class="bg-image-03 center full-screen middle overlay padding">
       <div class="max-width-m">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <h1>Taunggalay Buddhist College</h1>
         <p class="lead">Where Buddhism meets Science</p>
         <!-- <a href="signup.html" class="button button-primary space-top" role="button">Get started, it's free!</a> -->
@@ -95,7 +104,7 @@
       <div class="row margin-bottom max-width-l">
         <div class="col-one-half center-tablet middle">
           <h3>Dhammapada Verse 109</h3>
-          <p class="lead"><i>For one who always respects and honours those who are older and more virtuous, four benefits, viz., longevity, beauty, happiness and strength, will increase.</i></p>
+          <p class="lead"><i>"For one who always respects and honours those who are older and more virtuous, four benefits, viz., longevity, beauty, happiness and strength, will increase."</i></p>
           <ul class="inline space-top">
             <!-- <li><img src="media/logos/logo-html5.png" srcset="media/logos/logo-html5.png 1x, media/logos/logo-html5@2x.png 2x" alt="HTML5"></li>
             <li><img src="media/logos/logo-css3.png" srcset="media/logos/logo-css3.png 1x, media/logos/logo-css3@2x.png 2x" alt="CSS3"></li>
@@ -112,7 +121,7 @@
         </div>
         <div class="col-one-half center-tablet middle">
           <!-- <h2>Designed In Sketch</h2> -->
-          <p class="lead"><i>Avoid hatred and violence and persuit gentle means; tolerance and Ahimsa leads to success.</i></p>
+          <p class="lead"><i>"Avoid hatred and violence and persuit gentle means; tolerance and Ahimsa leads to success."</i></p>
           <ul class="inline space-top">
             <!-- <li><img src="media/logos/logo-sketch.png" srcset="media/logos/logo-sketch.png 1x, media/logos/logo-sketch@2x.png 2x" alt="Sketch"></li> -->
           </ul>
