update second year

--- a/academics.html
+++ b/academics.html
@@ -124,7 +124,7 @@
           <div class="col-one-fourth">
             <img class="min-width-l rounded" src="media/content/courses/religst-101.png"
               srcset="media/content/courses/religst-101.png 1x, media/content/courses/religst-101@2x.png 2x" alt="RELIGST 101">
-            <h6><br>RELIGST 101 <br>Buddhist Culture</h6>
+            <h6><br>DHAMMA 101 <br>Buddhist Culture</h6>
           </div>   
         </div>
       </div>
@@ -148,32 +148,47 @@
           <div class="col-one-fourth">
             <img class="min-width-l rounded" src="media/content/courses/religst-102.png"
               srcset="media/content/courses/religst-102.png 1x, media/content/courses/religst-102@2x.png 2x" alt="RELIGST 102">
-            <h6><br>RELIGST 102 <br>Buddhist Logic and Epistemology</h6>
+            <h6><br>DHAMMA 102 <br>Buddhist Logic and Epistemology</h6>
           </div>
         </div>
       </div>
       <div class="max-width-l">
         <div class="row margin-bottom">
-          <div class="col-one-fourth middle">
-            <h2>Third and Fourth Semester</h2>
+          <div class="col-one-half middle">
+            <h2>Final Year</h2>
+            <h5>Specialization</h5>
           </div>
-          <div class="col-one-fourth">
-            <img class="min-width-l rounded" src="media/content/courses/math-101.jpeg"
-              srcset="media/content/courses/math-101.jpeg 1x, media/content/courses/math-101@2x.jpeg 2x" alt="MATH 101">
-            <h6><br>MATH 101 <br>College Algebra</h6>
+          <div class="col-one-half">
+            <!-- <img class="min-width-l rounded" src="media/content/courses/math-101.jpeg" -->
+              <!-- srcset="media/content/courses/math-101.jpeg 1x, media/content/courses/math-101@2x.jpeg 2x" alt="MATH 101"> -->
+            <p>In the second year, students choose to specialize in one of the following areas: <b>Vinaya Pitaka, Sutta Pitaka, Abhidhamma Pitaka, or East Pwo Karen Literature, Tradition and Custom, Culture, or History.</b>
+              <br> 
+              <br>
+            <p>They will conduct research and prepare a 250-300 page thesis, which can be written in English, Myanmar, East Pwo Karen, or Pali, demonstrating their mastery of their chosen specialization and contributing to the academic fields of Buddhist studies or East Pwo Karen studies.</p> 
+              <!-- In-depth study of the monastic rules and regulations that govern the conduct of Buddhist monks and nuns.               -->
+            </p>
           </div>
-          <div class="col-one-fourth">
+          <!-- <div class="col-one-fifth">
             <img class="min-width-l rounded" src="media/content/courses/phys-101.jpeg"
               srcset="media/content/courses/phys-101.jpeg 1x, media/content/courses/phys-101@2x.jpeg 2x"
               alt="CHEM 101">
-            <h6><br>PHYS 101 <br>Introductory Physics</h6>
+            <h6><br>Sutta Pitaka <br> Comprehensive examination of the discourses of the Buddha, exploring their teachings and practical applications.
+              </h6>
           </div>
-          <div class="col-one-fourth">
+          <div class="col-one-fifth">
             <img class="min-width-l rounded" src="media/content/courses/religst-102.png"
               srcset="media/content/courses/religst-102.png 1x, media/content/courses/religst-102@2x.png 2x" alt="RELIGST 102">
-            <h6><br>RELIGST 102 <br>Buddhist Logic and Epistemology</h6>
+            <h6><br>Abhidhamma Pitaka <br>Advanced analysis of Buddhist psychology and philosophy, offering insights into the nature of mind and reality.
+              </h6>
           </div>
-        </div>
+          <div class="col-one-fifth">
+            <img class="min-width-l rounded" src="media/content/courses/religst-102.png"
+              srcset="media/content/courses/religst-102.png 1x, media/content/courses/religst-102@2x.png 2x" alt="RELIGST 102">
+            <h6><br>East Pwo Karen Literature, Tradition and Custom, Culture, History <br>Study of the East Pwo Karen's rich literary and cultural heritage, traditions, and historical developments. Students specializing in this area will also take a minor class in East Pwo Karen literature and culture for two semesters.
+        
+              </h6>
+          </div> -->
+          </div>
       </div>
 
       <p class="left"><b>Disclaimer:</b> Some of the course images are generated using AI for inspirational purposes only and may not accurately depict real-life situations.</p>
